--- a/index.html
+++ b/index.html
@@ -48,6 +48,22 @@
         </div>
       </div>
     </nav>
-    <h1 class="text-center">Croissant</h1>
+    <h1 class="text-center m-5">Croissant</h1>
+    <div class="container" style="max-width: 800px">
+      <div class="row">
+        <div class="col-12">
+          <p class="text-center">
+            A <strong>croissant</strong> (UK: /ˈkrwʌsɒŋ/; , US: /krəsɒnt/;
+            French pronunciation: [kʁwa.sɑ̃]) is a buttery, flaky, viennoiserie
+            pastry of Austrian origin, but mostly associated with France.
+            Croissants are named for its historical crescent shape and, like
+            other viennoiserie, are made of a layered yeast-leavened dough.
+            <br />
+            Fun fact: In Mexico they're called "cuernitos" ((meaning "little
+            horns") Mexican pronunciation: [/kwər.nee.toss/]).
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
