--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/src/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -47,6 +48,15 @@
         </div>
       </div>
     </nav>
-    <h1 class="text-center">Contact Me</h1>
+    <h1 class="text-center m-5">Contact Me</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col text-center">
+          <a href="mailto:lucero.cardenas@gmail.com"
+            >lucero.cardenas@gmail.com</a
+          >
+        </div>
+      </div>
+    </div>
   </body>
 </html>
