--- a/photo.html
+++ b/photo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/src/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -47,6 +48,13 @@
         </div>
       </div>
     </nav>
-    <h1 class="text-center">Croissant Photo</h1>
+    <h1 class="text-center m-5">Croissant Photo</h1>
+    <div class="container">
+      <img
+        src="/src/cuernito.jpg"
+        alt="Cuernito"
+        class="img-fluid rounded shadow-sm border d-block align-items-center image"
+      />
+    </div>
   </body>
 </html>
