--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <title>Contact Me</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-md">
         <a class="navbar-brand" href="#">Croissant</a>
         <button
