fixed responsive alignment issues

--- a/photo.html
+++ b/photo.html
@@ -50,11 +50,16 @@
     </nav>
     <h1 class="text-center m-5">Croissant Photo</h1>
     <div class="container">
-      <img
-        src="/src/cuernito.jpg"
-        alt="Cuernito"
-        class="img-fluid rounded shadow-sm border d-block align-items-center image"
-      />
+      <div class="row">
+        <div class="col">
+          <img
+            src="/src/cuernito.jpg"
+            alt="Cuernito"
+            class="img-fluid rounded shadow-sm border d-block align-items-center"
+            style="max-height: 700px"
+          />
+        </div>
+      </div>
     </div>
   </body>
 </html>
