made it SEO friendlier

--- a/photo.html
+++ b/photo.html
@@ -54,7 +54,7 @@
         <div class="col">
           <img
             src="/src/cuernito.jpg"
-            alt="Cuernito"
+            alt="Croissant, AKA 'Cuernito'"
             class="img-fluid rounded shadow-sm border d-block align-items-center"
             style="max-height: 700px"
           />
