--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="Coissant - As Told By Lucero Cardenas"
-      content="This site is dedicated to the magic of croissants 🥐"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="/src/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
@@ -34,6 +32,10 @@
       crossorigin="anonymous"
     ></script>
     <title>Croissant 🥐</title>
+    <meta
+      name="Coissant - As Told By Lucero Cardenas"
+      content="This site is dedicated to the magic of croissants 🥐"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
