deleted an emoji from the Meta Description

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <title>Croissant 🥐</title>
     <meta
       name="Coissant - As Told By Lucero Cardenas"
-      content="This site is dedicated to the magic of croissants 🥐"
+      content="This site is dedicated to the magic of croissants"
     />
   </head>
   <body>
