fixed the meta description name to 'description'

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
       crossorigin="anonymous"
     ></script>
-    <title>Croissant 🥐</title>
+    <title>Croissant 🥐 - As told by Lucero Cardenas</title>
     <meta
-      name="Coissant - As Told By Lucero Cardenas"
+      name="description"
       content="This site is dedicated to the magic of croissants"
     />
   </head>
