added more meta descriptions on each page

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,10 @@
       crossorigin="anonymous"
     ></script>
     <title>Contact Me</title>
+    <meta
+      name="description"
+      content="You can contact me for further discussion about croissants here"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
