--- a/photo.html
+++ b/photo.html
@@ -17,6 +17,7 @@
       crossorigin="anonymous"
     ></script>
     <title>Croissant Photo</title>
+    <meta name="description" content="A photo of a delicious Croissant" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
